develop/zen/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zen
  template:
    metadata:
      labels:
        app: zen
    spec:
      containers:
        - name: zen
          image: harbor.hubau.cloud/library/zen@sha256:5e5045b81bf6f11a243cbdc89ba1df3cf2325f93fea0e71e3ab0036a8c56bee9
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 20
            periodSeconds: 3
            httpGet:
              path: /actuator/health/liveness
              port: 8080
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /actuator/health/readiness
              port: 8080
          resources:
            requests:
              memory: 768Mi
              cpu: 500m
            limits:
              memory: 768Mi
          ports:
            - containerPort: 8080
