develop/zen/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zen
  labels:
    app: zen
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: zen
