develop/zen/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zen-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: contour
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: zen.test.demo.teco.online
      http:
        paths:
          - backend:
              serviceName: zen
              servicePort: http
            path: /
      https:
        paths:
          - backend:
              serviceName: zen
              servicePort: https
  tls:	
    - hosts:	
        - zen.test.demo.teco.online
      secretName: zen-ingress
